<resources>
    <string name="app_name">Memories Box</string>

    <string name="memories_list_item_title">Memory Title Example</string>
    <string name="memories_list_item_date">22/03/1991</string>
    <string name="memories_list_item_content">This is a Memory content example</string>
    <string name="memory_list_empty_list">There are no memories =/</string>
    <string name="memories_list_action_add_memory">Add memory</string>
    <string name="memory_list_action_mode_delete">Delete memory</string>

    <string name="memory_viewer_action_title">Memory Viewer</string>
    <string name="memory_viewer_action_delete">Delete memory</string>
    <string name="memory_viewer_action_add_image">Add image</string>
    <string name="memory_viewer_action_save">Save Memory</string>
    <string name="memory_viewer_description_title">Memory Title</string>
    <string name="memory_viewer_description_content">Memory Description</string>

    <string name="memoy_save_progress_dialog">Saving memory...</string>
    <string name="memory_viewer_action_mode_delete_images">Delete selected images</string>
</resources>
