<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:weightSum="1">

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:paddingLeft="3dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_horizontal"
            android:text="@string/memories_list_item_title"
            android:layout_weight="1"
            android:id="@+id/memories_list_item_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:paddingRight="3dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:text="@string/memories_list_item_date"
            android:layout_weight="0"
            android:id="@+id/memories_list_item_date"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/memories_list_item_content"
        android:id="@+id/memories_list_item_content"
        android:gravity="center"
        android:maxLength="100"
        android:layout_weight="0"
        android:padding="3dp"/>

</LinearLayout>
